--- a/public/popup.html
+++ b/public/popup.html
@@ -11,6 +11,7 @@
 <body>
     <div id="root"></div>
     <script src="vendor-react.js"></script>
+    <script src="vendor.js"></script>
     <script src="popup.js"></script>
 </body>
 
