--- a/public/window.html
+++ b/public/window.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MockAPI - Standalone Window</title>
+    <title>Moq - Standalone Window</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
